--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilo.css">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+
 </head>
 <body>
 <main>
 
 <div class="grid-container">
 
-    <div style="background-color: #00FF7F;height: 190px; text-align: center;position: relative;">
+    <div style="background-color: #00b347;height: 190px; text-align: center;position: relative;">
         <div style="height:150px;margin: 0;position: relative;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
             <img zoom-in-up src="img/fot1/planta_intro.png" />
-            <h4 class="subtitulo">Once tecnologías para una</h4>
-            <h1 class="titulo">CAFICULTURA SOSTENIBLE</h1>
+            <h4 class="subtitulo" style="font-family: 'Ludka Biniek';color: white;font-size: 20pt;">Once tecnologías para una</h4>
+            <span class="titulo" style="font-family: 'Druk Heavy';color: white;font-size: 38pt;">CAFICULTURA SOSTENIBLE</span>
         </div>
     </div>
 
@@ -80,7 +82,7 @@
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right;">
-                <img src="img/fot3/sello3A.png" height="132" width="157"/>
+                <img src="img/fot3/sello3A.png" style="max-width: 140px;"/>
             </div>
             <div style="padding: 20px; text-align: justify;">
                 <p>
@@ -109,8 +111,10 @@
                     <li>resistentes a plagas y enfermedades.</li>
                 </ul>
                 </p>
+                <p>
+                    <img src="img/boton/boton-celeste.png" style="width: 175px;" />
+                </p>
             </div>
-
         </div>
     </div>
     <!----- FOTOGRAMA 04 ----->
@@ -125,7 +129,7 @@
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot4/sello3A.png" />
+                <img src="img/fot4/sello3A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <p class="textoCudadrado">
@@ -153,6 +157,9 @@
                     <li>Reduce las pérdidas del suelo por causa de la erosión.</li>
                     <li>Ayuda a controlar las malezas.</li>
                 </ul>
+                <p>
+                    <img src="img/boton/boton-celeste.png" style="width: 175px;" />
+                </p>
                 </p>
             </div>
         </div>
@@ -168,7 +175,7 @@
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot5/sello1A.png" />
+                <img src="img/fot5/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <p>
@@ -201,6 +208,9 @@
                     <li>Reducen la concentración de GEI en la atmósfera.</li>
                     <li>Generan ingresos adicionales al cultivo de café por la venta de la madera.</li>
                 </ul>
+                <p>
+                    <img src="img/boton/boton-rosa.png" style="width: 175px;" />
+                </p>
                 </p>
             </div>
         </div>
@@ -216,7 +226,7 @@
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot6/sello1A.png" />
+                <img src="img/fot6/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <span class="tituloCuadrado">
@@ -240,21 +250,24 @@
                     <li>Permite ahorrar en la compra de insumos externos.</li>
                 </ul>
                 </p>
+                <p>
+                    <img src="img/boton/boton-rosa.png" style="width: 175px;" />
+                </p>
             </div>
         </div>
     </div>
     <!----- FOTOGRAMA 07 ----->
-    <div id="sec7" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
-        <div style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
+    <div id="sec7" class="grid-sub-container" style="background-color:#eeeeee;height: 570px">
+        <div style="max-width: 100%;position: relative;width:510px;height: 550px;margin: 0 auto;">
             <img src="img/fot7/fot7_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10.3%;z-index: 2;" />
             <img id="brazo71" src="img/fot7/fot7_brazoDER.png" class="img-puestas" style="top:36.2%;left: 32.1%;z-index: 3;" />
             <img id="brazo72" src="img/fot7/fot7_brazoIZQ.png" class="img-puestas" style="top:36%;left: 41.5%;z-index: 1;" />
             <img id="barro73" src="img/fot7/fot7_tierraABAJO.png" class="img-puestas" style="top:77.5%;left: 53%; z-index: 4;" />
             <img id="barro74" src="img/fot7/fot7_tierraARRIBA.png" class="img-puestas" style="top:65%;left: 59.3%;z-index: 5;" />
         </div>
-        <div style="max-width: 100%;max-height:100%;width:510px;height: 520px">
-            <div style="background-color: transparent;text-align: right">
-                <img src="img/fot7/sello3A.png" style="max-width: 100%;" />
+        <div style="max-width: 100%;max-height:100%;width:510px;height: 560px">
+            <div style="text-align: right">
+                <img src="img/fot7/sello3A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <span class="tituloCuadrado">
@@ -278,6 +291,9 @@
                     <li>Mejora la textura del suelo e incrementa la capacidad de absorción y retención del agua.</li>
                 </ul>
                 </p>
+                <p>
+                    <img src="img/boton/boton-celeste.png" style="width: 175px;" />
+                </p>
             </div>
         </div>
     </div>
@@ -292,7 +308,7 @@
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot8/sello1A.png" />
+                <img src="img/fot8/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <span class="tituloCuadrado">
@@ -315,20 +331,23 @@
                     <li>Facilita la incorporación de nutrientes en el suelo.</li>
                 </ul>
                 </p>
+                <p>
+                    <img src="img/boton/boton-rosa.png" style="width: 175px;" />
+                </p>
             </div>
         </div>
     </div>
     <!----- FOTOGRAMA 09 ----->
-    <div id="sec9" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
-        <div style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
+    <div id="sec9" class="grid-sub-container" style="background-color:#eeeeee;height: 570px">
+        <div style="max-width: 100%;position: relative;width:510px;height: 560px;margin: 0 auto;">
             <img src="img/fot9/fot9_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10%;z-index: 4;" />
             <img id="brazo91" src="img/fot9/fot9_brazoDER.png" class="img-puestas" style="top:37%;left: 64%;z-index: 1;" />
             <img id="brazo92" src="img/fot9/fot9_brazoIZQ.png" class="img-puestas" style="top:34%;left: 11%;z-index: 5;" />
             <img src="img/fot9/fot9_mochila_ESTATICO.png" class="img-puestas" style="top:35.2%;left: 82.3%;z-index: 6;" />
         </div>
-        <div style="max-width: 100%;max-height:100%;width:510px;height: 520px">
+        <div style="max-width: 100%;max-height:100%;width:510px;height: 560px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot9/sello2A.png" />
+                <img src="img/fot9/sello2A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <span class="tituloCuadrado">
@@ -354,6 +373,9 @@
                     <li>Si se realiza un control preventivo, los gastos pueden reducirse en 50%.</li>
                 </ul>
                 </p>
+                <p>
+                    <img src="img/boton/boton-amarillo.png" style="width: 175px;" />
+                </p>
             </div>
         </div>
     </div>
@@ -366,7 +388,7 @@
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot10/sello2A.png" />
+                <img src="img/fot10/sello2A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <span class="tituloCuadrado">
@@ -386,6 +408,9 @@
                     <li>Facilita y reduce costos durante el proceso de postcosecha del café.</li>
                 </ul>
                 </p>
+                <p>
+                    <img src="img/boton/boton-amarillo.png" style="width: 175px;" />
+                </p>
             </div>
         </div>
     </div>
@@ -401,7 +426,7 @@
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot11/sello3A.png" />
+                <img src="img/fot11/sello3A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <span class="tituloCuadrado">
@@ -421,18 +446,21 @@
                     <li>Mayor eficiencia en el aprovechamiento de los nutrientes.</li>
                 </ul>
                 </p>
+                <p>
+                    <img src="img/boton/boton-celeste.png" style="width: 175px;" />
+                </p>
             </div>
         </div>
     </div>
     <!----- FOTOGRAMA 12 ----->
-    <div id="sec12" class="grid-sub-container" style="background-color:white;height: 530px">
-        <div style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
+    <div id="sec12" class="grid-sub-container" style="background-color:white;height: 540px">
+        <div style="max-width: 100%;position: relative;width:510px;height: 525px;margin: 0 auto;">
             <img src="img/fot12/fot12_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
             <img id="brazo121" src="img/fot12/fot12_brazos.png" class="img-puestas" style="max-width:190px;top:27.5%;left: 43.5%;" />
         </div>
-        <div style="max-width: 100%;max-height:100%;width:510px;height: 520px">
+        <div style="max-width: 100%;max-height:100%;width:510px;height: 525px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot12/sello2A.png" />
+                <img src="img/fot12/sello2A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <span class="tituloCuadrado">
@@ -454,6 +482,9 @@
                     <li>Reduce el consumo de agua de 25 L/kg a 5 L/kg de café pergamino.</li>
                 </ul>
                 </p>
+                <p>
+                    <img src="img/boton/boton-amarillo.png" style="width: 175px;" />
+                </p>
             </div>
         </div>
     </div>
@@ -472,7 +503,7 @@
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot13/sello1A.png" />
+                <img src="img/fot13/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <span class="tituloCuadrado">
@@ -494,6 +525,9 @@
                     <li>Los costos de la implementación son relativamente bajos.</li>
                 </ul>
                 </p>
+                <p>
+                    <img src="img/boton/boton-rosa.png" style="width: 175px;" />
+                </p>
             </div>
         </div>
     </div>
@@ -505,7 +539,7 @@
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 505px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot14/sello1A.png" />
+                <img src="img/fot14/sello1A.png" style="max-width: 140px;" />
             </div>
             <div style="padding: 20px;text-align: justify;">
                 <span class="tituloCuadrado">
@@ -523,6 +557,9 @@
                     <li>Conserva la calidad.</li>
                     <li>Reducción de costo de la mano de obra para el secado.</li>
                 </ul>
+                </p>
+                <p>
+                    <img src="img/boton/boton-rosa.png" style="width: 175px;" />
                 </p>
             </div>
         </div>
