--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="grid-container">
 
-    <div style="background-color: #00b347;height: 190px; text-align: center;position: relative;">
+    <div id="idInicio" style="background-color: #00b347;height: 190px; text-align: center;position: relative;">
         <div style="height:150px;margin: 0;position: relative;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
             <img zoom-in-up src="img/fot1/planta_intro.png" />
             <h4 class="subtitulo" style="font-family: 'Ludka Biniek';color: white;font-size: 20pt;">Once tecnologías para una</h4>
