--- a/index.html
+++ b/index.html
@@ -492,13 +492,9 @@
     <div id="sec13" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
             <img src="img/fot13/fot13_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left:10%;z-index: 4;" />
-            <!---<img src="img/fot13/fot13_agua.png" class="img-puestas" style="top:0%;left: 0%;" />-->
-            <img src="img/fot13/fot13_mask1.png" class="img-puestas" style="top:40%;left: 0%;" />
-            <img src="img/fot13/fot13_mask1_agua.png" class="img-puestas" style="top:50%;left: 0%;" />
-            <img src="img/fot13/fot13_mask2.png" class="img-puestas" style="top:20%;left: 0%;" />
-            <img src="img/fot13/fot13_mask2_agua.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot13/fot13_mask3.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot13/fot13_mask3_agua.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img id="maskagua131" src="img/fot13/fot13_mask2_agua.png" class="img-puestas" style="width:110px;top:32.3%;left:31.6%;z-index: 3;" />
+            <img id="maskagua132" src="img/fot13/fot13_mask2_agua.png" class="img-puestas" style="width:80px;top:49.3%;left:34.0%;z-index: 4;" />
+            <img id="maskagua133" src="img/fot13/fot13_mask2_agua.png" class="img-puestas" style="width:80px;top:69.6%;left:48%;z-index: 5;" />
             <img src="img/fot13/fot13_tanqueATRAS.png" class="img-puestas" style="top:25%;left: 23%;z-index: 1;" />
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 520px">
