--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
         </div>
     </div>
     <!----- FOTOGRAMA 03 ----->
-    <div id="sec3" class="grid-sub-container" style="background-color: #eeeeee;max-height: 50%">
-        <div style="max-width: 100%;position: relative;width:510px;margin: 0 auto;">
+    <div id="sec3" class="grid-sub-container" style="background-color: #eeeeee;max-height: 60%;">
+        <div style="max-width: 100%;position: relative;width:100%;margin: 0 auto;">
             <img src="img/fot3/fot3_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 3;"/>
             <img src="img/fot3/fot3_objeto1_ESTATICO.png" class="img-puestas" style="top:19%;left: 41%;"/>
             <img src="img/fot3/fot3_objeto2_ESTATICO.png" class="img-puestas" style="top:71%;left: 6%;"/>
             <img id="mano1Ft3" src="img/fot3/fot3_mujer1_mano2atras.png" class="img-puestas" style="top:34.9%;left: 35.2%;z-index: 2;"/>
             <img id="mano2Ft3" src="img/fot3/fot3_mujer1_mano1.png" class="img-puestas" style="top:35%;left: 25.1%;z-index: 4;"/>
         </div>
-        <div style="max-width: 100%;">
+        <div style="max-width: 100%;width:100%;">
             <div style="background-color: transparent;text-align: right;">
                 <img src="img/fot3/sello3A.png" style="max-width: 140px;"/>
             </div>
@@ -118,7 +118,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 04 ----->
-    <div id="sec4" class="grid-sub-container" style="background-color: white;height: 550px">
+    <div id="sec4" class="grid-sub-container" style="background-color: white;height: 590px">
         <div style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
             <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" class="img-puestas" style="top:48%;left: 10%;" />
             <img id="PlantaGra1Ft4" src="img/fot4/fot4_planta1.png" id="Planta1Fot4" class="img-puestas" style="top:29.5%;left: 34%;z-index: 2;" />
@@ -165,7 +165,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 05 ----->
-    <div id="sec5" class="grid-sub-container" style="background-color:#eeeeee;height: 550px">
+    <div id="sec5" class="grid-sub-container" style="background-color:#eeeeee;height: 600px">
         <div style="max-width: 100%;;position: relative;width:510px;height: 520px;margin: 0 auto;">
             <img src="img/fot5/fot5_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
             <img id="arbolFt5" src="img/fot5/fot5_arbol1.png" class="img-puestas" style="top:2.2%;left: 4.1%;" />
@@ -216,7 +216,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 06 ----->
-    <div id="sec6" class="grid-sub-container" style="background-color:white;height: 530px">
+    <div id="sec6" class="grid-sub-container" style="background-color:white;height: 610px">
         <div style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
             <img src="img/fot6/fot6_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left: 2%;z-index: 2;" />
             <img id="brazo61" src="img/fot6/fot6_brazoDER.png" class="img-puestas" style="top:39.3%;left: 9.8%; z-index: 4;" />
@@ -257,7 +257,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 07 ----->
-    <div id="sec7" class="grid-sub-container" style="background-color:#eeeeee;height: 570px">
+    <div id="sec7" class="grid-sub-container" style="background-color:#eeeeee;height: 620px">
         <div style="max-width: 100%;position: relative;width:510px;height: 550px;margin: 0 auto;">
             <img src="img/fot7/fot7_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10.3%;z-index: 2;" />
             <img id="brazo71" src="img/fot7/fot7_brazoDER.png" class="img-puestas" style="top:36.2%;left: 32.1%;z-index: 3;" />
@@ -338,7 +338,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 09 ----->
-    <div id="sec9" class="grid-sub-container" style="background-color:#eeeeee;height: 570px">
+    <div id="sec9" class="grid-sub-container" style="background-color:#eeeeee;height: 640px">
         <div style="max-width: 100%;position: relative;width:510px;height: 560px;margin: 0 auto;">
             <img src="img/fot9/fot9_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10%;z-index: 4;" />
             <img id="brazo91" src="img/fot9/fot9_brazoDER.png" class="img-puestas" style="top:37%;left: 64%;z-index: 1;" />
@@ -415,7 +415,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 11 ----->
-    <div id="sec11" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
+    <div id="sec11" class="grid-sub-container" style="background-color:#eeeeee;height: 560px">
         <div style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
             <img src="img/fot11/fot11_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
             <img id="brazo111" src="img/fot11/fot11_brazoconTIJERA1.png" class="img-puestas" style="top:42%;left: 24%;" />
@@ -453,7 +453,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 12 ----->
-    <div id="sec12" class="grid-sub-container" style="background-color:white;height: 540px">
+    <div id="sec12" class="grid-sub-container" style="background-color:white;height: 590px">
         <div style="max-width: 100%;position: relative;width:510px;height: 525px;margin: 0 auto;">
             <img src="img/fot12/fot12_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
             <img id="brazo121" src="img/fot12/fot12_brazos.png" class="img-puestas" style="max-width:190px;top:27.5%;left: 43.5%;" />
@@ -489,7 +489,7 @@
         </div>
     </div>
     <!----- FOTOGRAMA 13 ----->
-    <div id="sec13" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
+    <div id="sec13" class="grid-sub-container" style="background-color:#eeeeee;height: 580px">
         <div style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
             <img src="img/fot13/fot13_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left:10%;z-index: 4;" />
             <img id="maskagua131" src="img/fot13/fot13_mask2_agua.png" class="img-puestas" style="width:110px;top:32.3%;left:31.6%;z-index: 3;" />
