--- a/index.html
+++ b/index.html
@@ -16,14 +16,25 @@
 <main>
 
 <div class="grid-container">
+    <!--
+     <div id="idInicio" style="background-color: #00b347;height: 300px;padding-top: 30px;text-align: center;position: relative;">
 
-    <div id="idInicio" style="background-color: #00b347;height: 190px; text-align: center;position: relative;">
-        <div style="height:180px;margin: 0;position: relative;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
+         <div style="height:185px;margin: 0;position: relative;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
+        </div>
+    </div>
+  -->
+    <div style="display: grid;grid-template-columns: auto;background-color: #00b347;padding: 30px;">
+        <div style="text-align: center;height: 50px;">
             <img zoom-in-up src="img/fot1/planta_intro.png" />
+        </div>
+        <div style="text-align: center;height: 20px;">
             <h4 class="subtitulo" style="font-family: 'Ludka Biniek';color: white;font-size: 20pt;">Once prácticas para una</h4>
+        </div>
+        <div style="text-align: center;height: 70px;">
             <span class="titulo" style="font-family: 'Druk Heavy';color: white;font-size: 38pt;">CAFICULTURA SOSTENIBLE</span>
         </div>
     </div>
+
 
     <!----- FOTOGRAMA 01 ----->
     <div id="sec1" class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
