--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   -->
     <div style="display: grid;grid-template-columns: auto;background-color: #00b347;padding: 30px;">
         <div style="text-align: center;height: 50px;">
-            <img zoom-in-up src="img/fot1/planta_intro.png" />
+            <img id="plan" zoom-in-up src="img/fot1/planta_intro.png" />
         </div>
         <div style="text-align: center;height: 20px;">
             <h4 class="subtitulo" style="font-family: 'Ludka Biniek';color: white;font-size: 20pt;">Once prácticas para una</h4>
