--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Hemos organizado estas prácticas en tres categorías según sus beneficios
             </p>
             <div style="background-color: transparent;">
-                <img src="img/estampas/sello3.png" height="121" width="139"/>
+                <img src="img/estampas/sello3.png" style="width: 110px; height: 100px;" />
                 <img src="img/estampas/sello2.png" height="121" width="139"/>
                 <img src="img/estampas/sello1.png" height="121" width="139"/>
             </div>
@@ -578,25 +578,16 @@
             <img id="humo151" src="img/fot15/fot15_humo.png" class="img-puestas" style="top:22%;left:44%;" />
         </div>
         <div style="max-width: 100%;max-height:100%;width:510px;height: 480px">
-            <div style="padding: 20px;text-align: justify;">
-                <span class="tituloCuadrado">
-                LOREM IPSUM
-            </span>
+            <div style="padding: 50px;text-align: justify;">
+
                 <p class="textoCudadrado">
-                    Consiste en implementar la Infraestructura básica en cada finca para procesar el café cerezo y transformarlo en café pergamino seco, listo para la comercialización. Dicha tecnología involucra 3 etapas: el manejo agronómico, cosecha del cerezo y la post cosecha.
+                    Estás prácticas forman parte de nuestro modelo SAM (Sistema Agroforestal Multiestrato), que articula el trabajo de las y los pequeños caficultores con tecnologías de manejo de vegetación y el suelo. A través de este sistema, cerca de 200,000 familias productoras de café podrían adaptarse al cambio climático y asegurar sus medios de vida. Además, tiene el potencial de contribuir para que el gobierno cumpla sus metas para la disminución de los impactos del cambio climático y reduzca sus emisiones. Finalmente, fortalece la producción de café, la cual genera cerca de 800 millones de dólares en exportaciones anualmente.
                 </p>
-                <span class="tituloCuadrado">
-                    VENTAJAS
-            </span>
-                <p>
-                <ul class="textoCudadrado">
-                    <li>Incrementa la calidad física de 54% a 75%, y la calidad en taza de 78 puntos a 84 puntos.</li>
-                    <li>Incremento de los ingresos en 20% solo por la calidad física del café.</li>
-                    <li>Facilita la articulación comercial con empresas y cooperativas exportadoras de cafés especiales.</li>
-                    <li>Reduce los costos hasta en 30%.</li>
-                    <li>Reduce el consumo de agua de 25 L/kg a 5 L/kg de café pergamino.</li>
-                </ul>
+
+                <p class="textoCudadrado">
+                El futuro de las y los agricultores, de los cultivos y de los ecosistemas de los que dependen, está sujeto a las acciones de adaptación que tomemos. Las comunidades que trabajan con Practical Action están construyendo un futuro fértil mediante la adaptación basada en los ecosistemas, teniendo a la agricultura regenerativa como base y a la diversificación como estrategia, a través de la aplicación del modelo SAM.
                 </p>
+
             </div>
         </div>
     </div>
