--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 Hemos organizado estas prácticas en tres categorías según sus beneficios
             </p>
             <div style="background-color: transparent;">
-                <img src="img/estampas/sello3.png" style="width: 110px; height: 100px;" />
+                <img src="img/estampas/sello3.png" style="width: 110px;" />
                 <img src="img/estampas/sello2.png" height="121" width="139"/>
                 <img src="img/estampas/sello1.png" height="121" width="139"/>
             </div>
