--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
         </div>
     </div>
     <!----- FOTOGRAMA 03 ----->
-    <div id="sec3" class="grid-sub-container" style="background-color: #eeeeee;max-height: 60%;">
-        <div style="max-width: 100%;position: relative;width:100%;height:100%;max-height: 100%;">
+    <div id="sec3" class="grid-sub-container" style="background-color: #eeeeee;height: 610px;">
+        <div style="max-width: 100%;position: relative;width:510px;height: 600px;;margin: 0 auto;">
             <img src="img/fot3/fot3_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 3;"/>
             <img src="img/fot3/fot3_objeto1_ESTATICO.png" class="img-puestas" style="top:19%;left: 41%;"/>
             <img src="img/fot3/fot3_objeto2_ESTATICO.png" class="img-puestas" style="top:71%;left: 6%;"/>
             <img id="mano1Ft3" src="img/fot3/fot3_mujer1_mano2atras.png" class="img-puestas" style="top:32.4%;left: 35%;z-index: 2;"/>
             <img id="mano2Ft3" src="img/fot3/fot3_mujer1_mano1.png" class="img-puestas" style="top:33%;left: 25.1%;z-index: 4;"/>
         </div>
-        <div style="max-width: 100%;width:100%;height:100%;max-height: 100%;height:100%">
+        <div style="max-width: 100%;height:600px;">
             <div style="background-color: transparent;text-align: right;">
                 <img src="img/fot3/sello3A.png" style="max-width: 140px;"/>
             </div>
