--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <!----- FOTOGRAMA 03 ----->
     <div id="sec3" class="grid-sub-container" style="background-color: #eeeeee;height: 610px;">
-        <div style="max-width: 100%;position: relative;width:510px;height: 600px;;margin: 0 auto;">
+        <div style="max-width: 100%;position: relative;width:510px;height: 600px;margin: 0 auto;">
             <img src="img/fot3/fot3_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 3;"/>
             <img src="img/fot3/fot3_objeto1_ESTATICO.png" class="img-puestas" style="top:19%;left: 41%;"/>
             <img src="img/fot3/fot3_objeto2_ESTATICO.png" class="img-puestas" style="top:71%;left: 6%;"/>
