--- a/index_gus.html
+++ b/index_gus.html
@@ -39,7 +39,7 @@
     <!----- FOTOGRAMA 01 ----->
     <div id="sec1" class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
         <div class="imagen1" style="max-width: 100%;position: relative;width:510px;height: 470px;margin: 0 auto;">
-            <img src="img/fot1/fot1_ESTATICO.png" class="img-puestas" style="top:10%;left: 9%;" />
+            <img id="imgFt1" src="img/fot1/fot1_ESTATICO.png" class="img-puestas" style="top:10%;left: 9%;" />
             <img id="Planta1Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:50%;left: 63.5%;" />
             <img id="Planta2Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:64.5%;left: 63%;" />
         </div>
