--- a/index_gus.html
+++ b/index_gus.html
@@ -130,12 +130,12 @@
     <!----- FOTOGRAMA 04 ----->
     <div id="sec4" class="grid-sub-container" style="background-color: white;height: 590px">
         <div id="sec4img1" style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
-            <img src="img/fot4/fot4_ESTATICO.png" id="TallosFot4" class="img-puestas" style="top:48%;left: 10%;" />
-            <img id="PlantaGra1Ft4" src="img/fot4/fot4_planta1.png" id="Planta1Fot4" class="img-puestas" style="top:29.5%;left: 34%;z-index: 2;" />
-            <img id="PlantaGra2Ft4" src="img/fot4/fot4_planta2.png" id="Planta2Fot4" class="img-puestas" style="top:10%;left: 40.5%;z-index: 1;" />
-            <img id="Planta1Ft4" src="img/fot4/fot4_planta3.png" id="Planta3AFot4" class="img-puestas" style="top:49.5%;left: 17.1%;" />
-            <img id="Planta2Ft4" src="img/fot4/fot4_planta3.png" id="Planta3BFot4" class="img-puestas" style="top:65.8%;left: 12.8%;" />
-            <img id="Planta3Ft4" src="img/fot4/fot4_planta4.png" id="Planta4AFot4" class="img-puestas" style="top:66%;left: 66%;" />
+            <img id="imgEst1Ft4" src="img/fot4/fot4_ESTATICO.png" class="img-puestas" style="top:48%;left: 10%;" />
+            <img id="PlantaGra1Ft4" src="img/fot4/fot4_planta1.png" class="img-puestas" />
+            <img id="PlantaGra2Ft4" src="img/fot4/fot4_planta2.png" class="img-puestas" />
+            <img id="Planta1Ft4" src="img/fot4/fot4_planta3.png" class="img-puestas" />
+            <img id="Planta2Ft4" src="img/fot4/fot4_planta3.png" class="img-puestas" />
+            <img id="Planta3Ft4" src="img/fot4/fot4_planta4.png" class="img-puestas" />
         </div>
         <div id="sec4img2" style="max-width: 100%;max-height:100%;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right">
@@ -177,11 +177,11 @@
     <!----- FOTOGRAMA 05 ----->
     <div id="sec5" class="grid-sub-container" style="background-color:#eeeeee;height: 680px">
         <div id="sec5img1" style="max-width: 100%;;position: relative;width:510px;height: 590px;margin: 0 auto;">
-            <img src="img/fot5/fot5_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
-            <img id="arbolFt5" src="img/fot5/fot5_arbol1.png" class="img-puestas" style="top:2.2%;left: 4.1%;" />
-            <img id="arboitoFt5" src="img/fot5/fot5_cafe.png" class="img-puestas" style="top:54%;left: 58.8%;" />
-            <img id="planta1Ft5" src="img/fot5/fot5_planta1.png" class="img-puestas" style="top:75%;left:46%" />
-            <img id="planta2Ft5" src="img/fot5/fot5_planta2.png" class="img-puestas" style="top:75%;left: 79.7%"/>
+            <img id="imgEst1Ft5" src="img/fot5/fot5_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
+            <img id="arbolFt5" src="img/fot5/fot5_arbol1.png" class="img-puestas" />
+            <img id="arboitoFt5" src="img/fot5/fot5_cafe.png" class="img-puestas" />
+            <img id="planta1Ft5" src="img/fot5/fot5_planta1.png" class="img-puestas" />
+            <img id="planta2Ft5" src="img/fot5/fot5_planta2.png" class="img-puestas" />
         </div>
         <div id="sec5img2" style="max-width: 100%;max-height:100%;width:510px;height: 590px">
             <div style="background-color: transparent;text-align: right">
@@ -228,7 +228,7 @@
     <!----- FOTOGRAMA 06 ----->
     <div id="sec6" class="grid-sub-container" style="background-color:white;height: 610px">
         <div id="sec6img1" style="max-width: 100%;position: relative;width:510px;height: 600px;margin: 0 auto;">
-            <img src="img/fot6/fot6_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left: 2%;z-index: 2;" />
+            <img id="imgEst1Ft6" src="img/fot6/fot6_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left: 2%;z-index: 2;" />
             <img id="brazo61" src="img/fot6/fot6_brazoDER.png" class="img-puestas" style="top:38.3%;left: 9.8%; z-index: 4;" />
             <img id="brazo62" src="img/fot6/fot6_brazoIZQ.png" class="img-puestas" style="top:38.4%;left: 15.3%; z-index: 1;" />
             <img id="tierra61" src="img/fot6/fot6_tierra.png" class="img-puestas" style="top:50%;left: 33%; z-index: 3" />
@@ -269,7 +269,7 @@
     <!----- FOTOGRAMA 07 ----->
     <div id="sec7" class="grid-sub-container" style="background-color:#eeeeee;height: 660px">
         <div id="sec7img1" style="max-width: 100%;position: relative;width:510px;height: 550px;margin: 0 auto;">
-            <img src="img/fot7/fot7_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10.3%;z-index: 2;" />
+            <img id="imgEst1Ft7" src="img/fot7/fot7_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10.3%;z-index: 2;" />
             <img id="brazo71" src="img/fot7/fot7_brazoDER.png" class="img-puestas" style="top:36.2%;left: 32.1%;z-index: 3;" />
             <img id="brazo72" src="img/fot7/fot7_brazoIZQ.png" class="img-puestas" style="top:36%;left: 41.5%;z-index: 1;" />
             <img id="barro73" src="img/fot7/fot7_tierraABAJO.png" class="img-puestas" style="top:77.5%;left: 53%; z-index: 4;" />
@@ -310,9 +310,9 @@
     <!----- FOTOGRAMA 08 ----->
     <div id="sec8" class="grid-sub-container" style="background-color:white;height: 560px">
         <div id="sec8img1" style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
-            <img src="img/fot8/fot8_mujer-fondo_ESTATICO.png" class="img-puestas" style="top:40%;left: 10%;" />
+            <img id="imgEst1Ft8" src="img/fot8/fot8_mujer-fondo_ESTATICO.png" class="img-puestas" style="top:40%;left: 10%;" />
             <img id="persona81" src="img/fot8/fot8_mujer.png" class="img-puestas" style="top:35%;left: 38%;z-index: 2;" />
-            <img src="img/fot8/fot8_planta_creciendo.png" class="img-puestas" height="170px" style="top:36.2%;left: 17%;" />
+            <img id="imgEst2Ft8" src="img/fot8/fot8_planta_creciendo.png" class="img-puestas" height="170px" style="top:36.2%;left: 17%;" />
             <img id="persona82" src="img/fot8/fot8_tronco1.png" class="img-puestas" style="top:47.5%;left: 37%;z-index: 1;" />
             <img id="persona83" src="img/fot8/fot8_tronco2.png" class="img-puestas" style="top:66%;left: 39.5%;" />
         </div>
@@ -350,10 +350,10 @@
     <!----- FOTOGRAMA 09 ----->
     <div id="sec9" class="grid-sub-container" style="background-color:#eeeeee;height: 680px">
         <div id="sec9img1" style="max-width: 100%;position: relative;width:510px;height: 560px;margin: 0 auto;">
-            <img src="img/fot9/fot9_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10%;z-index: 4;" />
+            <img id="imgEst1Ft9" src="img/fot9/fot9_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10%;z-index: 4;" />
             <img id="brazo91" src="img/fot9/fot9_brazoDER.png" class="img-puestas" style="top:37%;left: 64%;z-index: 1;" />
             <img id="brazo92" src="img/fot9/fot9_brazoIZQ.png" class="img-puestas" style="top:34%;left: 11%;z-index: 5;" />
-            <img src="img/fot9/fot9_mochila_ESTATICO.png" class="img-puestas" style="top:35.2%;left: 82.3%;z-index: 6;" />
+            <img id="imgEst2Ft9" src="img/fot9/fot9_mochila_ESTATICO.png" class="img-puestas" style="top:35.2%;left: 82.3%;z-index: 6;" />
         </div>
         <div id="sec9img2" style="max-width: 100%;max-height:100%;width:510px;height: 560px">
             <div style="background-color: transparent;text-align: right">
@@ -392,7 +392,7 @@
     <!----- FOTOGRAMA 10 ----->
     <div id="sec10" class="grid-sub-container" style="background-color:white;height: 560px">
         <div id="sec10img1" style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
-            <img src="img/fot10/fot10_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 4;" />
+            <img id="imgEst1Ft10" src="img/fot10/fot10_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 4;" />
             <img id="fruto101" src="img/fot10/fot10_cafecitofruto.png" class="img-puestas" style="top:30%;left: 44%;z-index: 5;" />
             <img id="fruto102" src="img/fot10/fot10_mujerBRAZO.png" class="img-puestas" style="top:25.2%;left: 31%;z-index: 3;" />
         </div>
@@ -427,12 +427,12 @@
     <!----- FOTOGRAMA 11 ----->
     <div id="sec11" class="grid-sub-container" style="background-color:#eeeeee;height: 600px">
         <div id="sec11img1" style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
-            <img src="img/fot11/fot11_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
+            <img id="imgEst1Ft11" src="img/fot11/fot11_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
             <img id="brazo111" src="img/fot11/fot11_brazoconTIJERA1.png" class="img-puestas" style="top:42%;left: 24%;" />
             <img id="brazo112" src="img/fot11/fot11_brazoconTIJERA2.png" class="img-puestas" style="top:38.2%;left: 32.5%;" />
-            <img src="img/fot11/fot11_hojas1.png" class="img-puestas" style="top:36%;left: 44%;" />
+            <img id="imgEst2Ft11" src="img/fot11/fot11_hojas1.png" class="img-puestas" style="top:36%;left: 44%;" />
             <img id="hoja113" src="img/fot11/fot11_hojas2CAYENDOSE.png" class="img-puestas" style="top:50%;left: 43%;" />
-            <img src="img/fot11/fot11_tijeraCIRCULO.png" class="img-puestas" style="top:46.7%;left: 44%;z-index: 4;" />
+            <img id="imgEst3Ft11" src="img/fot11/fot11_tijeraCIRCULO.png" class="img-puestas" style="top:46.7%;left: 44%;z-index: 4;" />
         </div>
         <div id="sec11img2" style="max-width: 100%;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -465,7 +465,7 @@
     <!----- FOTOGRAMA 12 ----->
     <div id="sec12" class="grid-sub-container" style="background-color:white;height: 620px">
         <div id="sec12img1" style="max-width: 100%;position: relative;width:510px;height: 525px;margin: 0 auto;">
-            <img src="img/fot12/fot12_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
+            <img id="imgEst1Ft12" src="img/fot12/fot12_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
             <img id="brazo121" src="img/fot12/fot12_brazos.png" class="img-puestas" style="max-width:190px;top:27.5%;left: 43.5%;" />
         </div>
         <div id="sec12img2" style="max-width: 100%;max-height:100%;width:510px;height: 525px">
@@ -501,11 +501,11 @@
     <!----- FOTOGRAMA 13 ----->
     <div id="sec13" class="grid-sub-container" style="background-color:#eeeeee;height: 640px">
         <div id="sec13img1" style="max-width: 100%;position: relative;width:510px;height: 520px;margin: 0 auto;">
-            <img src="img/fot13/fot13_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left:10%;z-index: 4;" />
+            <img id="imgEst1Ft13" src="img/fot13/fot13_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left:10%;z-index: 4;" />
             <img id="maskagua131" src="img/fot13/fot13_mask2_agua.png" class="img-puestas" style="max-width:110px;top:32.3%;left:31.6%;z-index: 3;" />
             <img id="maskagua132" src="img/fot13/fot13_mask2_agua.png" class="img-puestas" style="max-width:80px;top:49.3%;left:34.0%;z-index: 4;" />
             <img id="maskagua133" src="img/fot13/fot13_mask2_agua.png" class="img-puestas" style="max-width:80px;top:69.6%;left:48%;z-index: 5;" />
-            <img src="img/fot13/fot13_tanqueATRAS.png" class="img-puestas" style="top:25%;left: 23%;z-index: 1;" />
+            <img id="imgEst2Ft13" src="img/fot13/fot13_tanqueATRAS.png" class="img-puestas" style="top:25%;left: 23%;z-index: 1;" />
         </div>
         <div id="sec13img2" style="max-width: 100%;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -540,7 +540,7 @@
     <!----- FOTOGRAMA 14 ----->
     <div id="sec14" class="grid-sub-container" style="background-color:white;height: 510px">
         <div id="sec14img1" style="max-width: 100%;position: relative;width:510px;height: 505px;margin: 0 auto;">
-            <img src="img/fot14/fot14_mujer_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
+            <img id="imgEst1Ft14" src="img/fot14/fot14_mujer_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
             <img id="brazo141" src="img/fot14/fot14_brazos.png" class="img-puestas" style="max-width: 95px; top:55.4%;left:56.2%;" />
         </div>
         <div id="sec14img2" style="max-width: 100%;max-height:100%;width:510px;height: 505px">
@@ -573,7 +573,7 @@
     <!----- FOTOGRAMA 15 ----->
     <div id="sec15" class="grid-sub-container" style="background-color:#eeeeee;height: 480px">
         <div id="sec15img1" style="max-width: 100%;position: relative;width:510px;height: 480px;margin: 0 auto;">
-            <img src="img/fot15/fot15_taza_ESTATICO.png" class="img-puestas" style="top:38%;left: 12%;" />
+            <img id="imgEst1Ft15" src="img/fot15/fot15_taza_ESTATICO.png" class="img-puestas" style="top:38%;left: 12%;" />
             <img id="humo151" src="img/fot15/fot15_humo.png" class="img-puestas" style="top:22%;left:44%;" />
         </div>
         <div id="sec15img2" style="max-width: 100%;max-height:100%;width:510px;height: 440px">
